# EclipseMathLibrary

./: CMakeLists.txt  README.md  UntilitedMathLibrary.cpp
BoronMath/SIMD/Matrix4x4/: Matrix4x4.h
UntilitedMath/: UntilitedMath.h  Variables.h
UntilitedMath/Functions/: Matrix4x4Functions.h  Matrix4x4LookAt.h  StoreVector.h  TransformVector.h  Utils.h
UntilitedMath/SIMD/Color255/: Color255.h
UntilitedMath/SIMD/Int3/: Int3.h
UntilitedMath/SIMD/Matrix4x4/: Matrix4x4.h
UntilitedMath/SIMD/Vector2/: Vector2.h
UntilitedMath/SIMD/Vector3/: Vector3.h
UntilitedMath/SIMD/Vector4/: Vector4.h
